Commentaire...:
	Travail sur le scarabée : script de mort
	Tache 102 terminée : durées devie et d'incubation des  scarabées et des oeufs
	Tache 109 terminée : Ajout de particules dispersées à la mort d'une bestiole (fourmis blanches et noires, scarabées)
	Ajout des prefabs corrigés de Sophie (reines et ouvrières)
	Mises à jour de totues les scènes et des prefabs de la scène
	Tache 92 terminée : éclosion des oeufs
	Tache 108 terminée : kinder surprise
	Tache 110 terminée : Ajout d'une méthode pour créer une case d'eau;
__________________________________

Numero........:  45;
Date..........:  14/11/2014 10h49;
Auteur........:  py;
Commentaire...:
	Tache 111 terminée : Placement automatique des reines
	Ajout d'une méthode pour choper un hexagone donné
	Mise à jour prefab des reines (blocages en X/Y/Z rotation/position);

__________________________________

Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	Travail sur cablage avec l'IA [en cours]
		- Ajout des fichiers
		- Cablage code IA pour:
			- combattante, générale, contremaitre, ouvrière
	Correction rayon des rayons de détections qui étaient trop bas
	Correction du bout de bois : trigger pour le collider
	Correction du signalement avec l'IAreaction
	Suivi des phéromones

__________________________________

Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________

Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________

Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________

Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________
Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________